[package]
name          = "evolution"
description   = "2D genetic algorithm simulation written in Rust"
version       = "0.0.1"
authors       = [ "Austin Baugh <abaugh@pdx.edu>" ]
edition       = "2018"
repository    = "https://github.com/austinsheep/evolution"
documentation = "https://web.pdx.edu/~abaugh/doc/evolution"
readme        = "README.md"
license       = "MIT"

[dependencies]
rand = "0.7"
cgmath = "0.17"
ggez = "0.5.0-rc.2"
ron = "0.6.3"
serde = { version = "1", features = ["serde_derive"] }
